--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.5.2",
     "express-session": "^1.18.2",
     "mysql2": "^3.14.3"
   },
